--- a/assets/scss/layouts/_why-choose-us.scss
+++ b/assets/scss/layouts/_why-choose-us.scss
@@ -192,6 +192,7 @@
         @media(max-width:576px) {
             width: 450px;
             height: 450px;
+            margin-top: 2rem;
         }
 
         @media(max-width:550px) {
